# flowerpower_old

./: README.md  pyproject.toml
examples/: playground.ipynb  simple_pipe.py
examples/conf/: catalog.yaml  params.yaml
examples/conf/params/: test.toml
examples/params/: test.py
examples/transformers/: test.py
src/flowerpower/: catalog.py  params.py  transform.py
